[package]
name = "rex"
author = "II"
version = "0.1.2"
edition = "2021"

[dependencies]
walkdir = "2.3.1"
dialoguer = "0.8.0"
console = "0.11.3"
rayon = "1.5"
open = "1.4.0"

[build-dependencies]
winres = "0.1"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html